# personalcv-alarm-clock

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily_run.yml  mypy.yml  ruff.yml
src/: main.py
src/config/: settings.py
src/core/: constants.py
src/core/providers/: alarm.py  settings.py  webdriver.py
src/services/: interfaces.py
src/services/alarm/: factory.py  service.py
