[project]
name = "personalcv-alarm-clock"
version = "0.1.0"
description = "Script to wake up my resume site"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "dishka>=1.6.0",
    "pydantic-settings>=2.9.1",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.11.11",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 90
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "T"]
ignore = []

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src/**/*.py"]
mypy_path = "."
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
